--- a/StudentRecruiter/Views/Account/ConfirmEmail.cshtml
+++ b/StudentRecruiter/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Potwierdź swój email";
 }
 
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+       Email został potwierdzony. @Html.ActionLink("Kliknij aby się zalogować", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
