--- a/StudentRecruiter/Views/Account/ExternalLoginFailure.cshtml
+++ b/StudentRecruiter/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Błąd logowania";
 }
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h3 class="text-danger">Nie udało się zalogować. Sprawdź swoj dane do logowania.</h3>
 </hgroup>
