--- a/StudentRecruiter/Views/Shared/_Layout.cshtml
+++ b/StudentRecruiter/Views/Shared/_Layout.cshtml
@@ -28,18 +28,26 @@
 					@*<li>@Html.ActionLink("Konto", "Details", "Candidate")</li>*@
 					@if (User.Identity.IsAuthenticated)
 					{
-						if (User.IsInRole("Admin"))						{
+						if (User.IsInRole("Admin"))
+						{
 							<li>@Html.ActionLink("Administracja", "Index", "Admin")</li>
 						}
-						
+
 					}
-					
+
 				</ul>
 				@Html.Partial("_LoginPartial")
 			</div>
 		</div>
 	</div>
-	<div class="container body-content">
+	<div class="row" style="text-align:center">
+		<input type="button" value="Rekrutacje" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAll", "Recruitment")'" />
+		<input type="button" value="Kierunki" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAll", "FieldOfStudy")'" />
+		<input type="button" value="Kandydaci" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAll", "Candidate")'" />
+		<input type="button" value="Użytkownicy" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAllUsers", "Admin")'" />
+		<input type="button" value="Ogólne" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("Settings", "Admin")'" />
+	</div>
+	<div class="container body-content" style="margin-top:20px">
 		@RenderBody()
 		<hr />
 		<footer>
