--- a/StudentRecruiter/Views/FieldOfStudies/Create.cshtml
+++ b/StudentRecruiter/Views/FieldOfStudies/Create.cshtml
@@ -1,18 +1,14 @@
 ﻿@model StudentRecruiter.Models.Domain.FieldOfStudy
 
-@{
-    ViewBag.Title = "Create";
-}
 
-<h2>Create</h2>
+<h2>Kierunki studiów</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>FieldOfStudy</h4>
+    <h4>Utwórz kierunek</h4>
+    <div class="form-horizontal">        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -33,14 +29,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Zapisz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy kierunków", "Index")
 </div>
 
 @section Scripts {
