--- a/StudentRecruiter/Views/FieldOfStudies/Delete.cshtml
+++ b/StudentRecruiter/Views/FieldOfStudies/Delete.cshtml
@@ -1,14 +1,9 @@
 ﻿@model StudentRecruiter.Models.Domain.FieldOfStudy
 
-@{
-    ViewBag.Title = "Delete";
-}
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Kierunki studiów</h2>
 <div>
-    <h4>FieldOfStudy</h4>
+	<h4>Czy na pewno chcesz usunąć ten kierunek?</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -33,8 +28,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy kierunków", "Index")
         </div>
     }
 </div>
