--- a/StudentRecruiter/Views/FieldOfStudies/Edit.cshtml
+++ b/StudentRecruiter/Views/FieldOfStudies/Edit.cshtml
@@ -1,10 +1,7 @@
 ﻿@model StudentRecruiter.Models.Domain.FieldOfStudy
 
-@{
-    ViewBag.Title = "Edit";
-}
 
-<h2>Edit</h2>
+<h2>Kierunki studiów</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +9,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>FieldOfStudy</h4>
+        <h4>Edycja</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -35,14 +32,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Zapisz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy kierunków", "Index")
 </div>
 
 @section Scripts {
