--- a/StudentRecruiter/Views/Users/Index.cshtml
+++ b/StudentRecruiter/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StudentRecruiter.Models.Domain.>
+﻿@*@model IEnumerable<StudentRecruiter.Models.Domain.>
 
 
 <h2>Użytkownicy</h2>
@@ -37,4 +37,4 @@
 		</tr>
 	}
 
-</table>
+</table>*@
