--- a/StudentRecruiter/Views/CandidateDetails/Create.cshtml
+++ b/StudentRecruiter/Views/CandidateDetails/Create.cshtml
@@ -1,64 +1,71 @@
 ﻿@model StudentRecruiter.Models.ViewModels.CandidateViewModel
 
 
-@using (Html.BeginForm("Create", "Candidate")) 
+@using (Html.BeginForm("Create", "CandidateDetails")) 
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
 	<h4>Aby wziąć udział w rekrutacji uzupełnij swoje dane osobowe</h4>
 	<hr />
-	<h4>Krok 1 z 3</h4>
+	<h4>Krok 1 z 2</h4>
 	<hr />
-	<p class="alert alert-info">Proszę uzupełnić wszystkie pola</p>
+	<p class="alert alert-info">Proszę uzupełnić wszystkie wymagane pola</p>
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+	
 	<div class="form-group">
 		@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control " } })
-			@Html.ValidationMessageFor(model => model.FirstName, "Imię jest wymagane", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.FirstName, "Imię jest wymagane", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.SecondName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.SecondName, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.LastName, "Nazwisko jest wymagane", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.LastName, "Nazwisko jest wymagane", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.DateOfBirth, "Data urodzenia jest wymagana", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.DateOfBirth, "Data urodzenia jest wymagana", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.PlaceOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.PlaceOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.PlaceOfBirth, "Miejsce urodzenia jest wymagane", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.PlaceOfBirth, "Miejsce urodzenia jest wymagane", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.PhoneNumber, "Numer telefonu jest wymagany", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.PhoneNumber, "Numer telefonu jest wymagany", new { @class = "text-danger" })*@
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.Pesel, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.Pesel, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })
+			@*@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })*@
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.DocumentTypes, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.DropDownListFor(model=> model.DocumentTypeId, new SelectList(Model.DocumentTypes, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
