--- a/StudentRecruiter/Views/CandidateDetails/Create.cshtml
+++ b/StudentRecruiter/Views/CandidateDetails/Create.cshtml
@@ -8,11 +8,11 @@
 <div class="form-horizontal">
 	<h4>Aby wziąć udział w rekrutacji uzupełnij swoje dane osobowe</h4>
 	<hr />
-	<h4>Krok 1 z 2</h4>
+	<h4>Krok 1 z 3</h4>
 	<hr />
 	<p class="alert alert-info">Proszę uzupełnić wszystkie wymagane pola</p>
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-	
+
 	<div class="form-group">
 		@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
@@ -65,14 +65,21 @@
 	<div class="form-group">
 		@Html.LabelFor(model => model.DocumentTypes, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
-			@Html.DropDownListFor(model=> model.DocumentTypeId, new SelectList(Model.DocumentTypes, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
+			@Html.DropDownListFor(model => model.DocumentTypeId, new SelectList(Model.DocumentTypes, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
 		</div>
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(model => model.Pesel, htmlAttributes: new { @class = "control-label col-md-2" })
+		@Html.LabelFor(model => model.SerialNumber, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.Pesel, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.EditorFor(model => model.SerialNumber, new { htmlAttributes = new { @class = "form-control" } })
 			@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.ExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.ExpirationDate, new { htmlAttributes = new { @class = "form-control" } })
+			@*@Html.ValidationMessageFor(model => model.DateOfBirth, "Data urodzenia jest wymagana", new { @class = "text-danger" })*@
 		</div>
 	</div>
 
