--- a/StudentRecruiter/Views/Home/Index.cshtml
+++ b/StudentRecruiter/Views/Home/Index.cshtml
@@ -1,14 +1,24 @@
-﻿@{
-    ViewBag.Title = "Strona główna";
-}
-
+﻿
 <div class="jumbotron">
-    <h1>Strona Główna</h1>
-	<p class="lead"> Tu do zdecydowania jaka będzie strona główna</p>
+	<p class="lead"> Prosimy o uważne przeczytanie poniższych informacji.</p>	
+
+	Kandydat rejestruje się w Systemie Obsługi Kandydatów tylko raz (zakłada jedno konto).<br />
+	Kandydat może po założeniu konta wybrać i ubiegać się o przyjęcie na jeden kierunek i formę (stacjonarne lub niestacjonarne) na danym stopniu studiów uzyskując status "zarejestrowany". Wybór ten można dowolnie zmieniać. <br />
+	Opłatę rekrutacyjną należy wnieść na indywidualny numer konta bankowego, który pojawia się po zakończeniu rejestracji i wyborze kierunku studiów. Potwierdzenie wniesienia opłaty rekrutacyjnej jest odnotowywane w formularzu rejestracyjnym kandydata zwykle 2-3 dni robocze od dnia dokonania wpłaty (przelewu). <br />
+	Opłata rekrutacyjna nie podlega zwrotowi. <br />
+	Kandydat na studia I stopnia w formularzu rekrutacyjnym uzupełnia wyniki przy wszystkich przedmiotach zdawanych na egzaminie maturalnym pisemnym oraz wprowadza wszystkie wyniki z tych przedmiotów. Wyniki należy wprowadzić dla każdego zdawanego poziomu egzaminu – podstawowego i/lub rozszerzonego, dotyczy to również olimpijczyków. <br />
+	Po zarejestrowaniu się kandydat uzyskuje możliwość wielokrotnego logowania się poprzez wpisanie nazwy użytkownika i hasła (podanego w trakcie rejestracji). Logowanie umożliwia:<br />
+	dostęp do formularza, sprawdzenie, poprawienie i uzupełnienie danych,<br />
+	wybór lub zmianę formy i kierunku studiów,<br />	
+	sprawdzenie stanu opłaty rekrutacyjnej,<br />
+	sprawdzenie statusu kandydata,<br />
+	W każdym etapie wynikającym z kalendarium rekrutacji kwalifikowani są tylko kandydaci, którzy mają status "zarejestrowany".<br />
+	Kandydat zakwalifikowany do przyjęcia, który nie złoży dokumentów w wyznaczonym terminie traktowany jest jak osoba, która zrezygnowała z udziału w rekrutacji. Ponowny udział kandydata w kwalifikacji w terminach uzupełniających wymaga zalogowania się do SOK, wyboru kierunku i uzyskania statusu „zarejestrowany”.<br />
+	Hasło do logowania w SOK (zapomniane, zgubione) można odzyskać samodzielnie w zakładce "odzyskiwanie hasła". Jest to możliwe tylko dla kandydatów, którzy przy rejestracji w formularzu podali własny, poprawny adres poczty internetowej (e-mail).<br />
 
 </div>
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-4">
         <h2>Może jakaś nawigacja?</h2>
         <p>
@@ -17,4 +27,4 @@
     </div>
     
 
-</div>
+</div>*@
