--- a/StudentRecruiter/Views/CandidateDetails/Create.cshtml
+++ b/StudentRecruiter/Views/CandidateDetails/Create.cshtml
@@ -6,9 +6,9 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-	<h4>Aby wziąć udział w rekrutacji uzupełnij swoje dane osobowe</h4>
+	<h4>Krok 1 z 2</h4>
 	<hr />
-	<h4>Krok 1 z 3</h4>
+	<h4>Aby wziąć udział w rekrutacji uzupełnij swoje dane osobowe</h4>
 	<hr />
 	<p class="alert alert-info">Proszę uzupełnić wszystkie wymagane pola</p>
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -16,52 +16,96 @@
 	<div class="form-group">
 		@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control " } })
-			@*@Html.ValidationMessageFor(model => model.FirstName, "Imię jest wymagane", new { @class = "text-danger" })*@
+			@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.SecondName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.SecondName, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.LastName, "Nazwisko jest wymagane", new { @class = "text-danger" })*@
+			@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.DateOfBirth, "Data urodzenia jest wymagana", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.PlaceOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.PlaceOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.PlaceOfBirth, "Miejsce urodzenia jest wymagane", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.PlaceOfBirth, "", new { @class = "text-danger" })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.PhoneNumber, "Numer telefonu jest wymagany", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.Pesel, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.Pesel, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })
 		</div>
 	</div>
+	<p>Adres zamieszkania</p>
+	<div class="form-group">
+		@Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.HouseNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.ApartmentNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.ApartmentNumber, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.ApartmentNumber, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.ZipCode, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-10">
+			@Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
+		</div>
+	</div>
+
+
+	<p>Dokument tożsamości</p>
 	<div class="form-group">
 		@Html.LabelFor(model => model.DocumentTypes, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
@@ -72,21 +116,21 @@
 		@Html.LabelFor(model => model.SerialNumber, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.SerialNumber, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.Pesel, "", new { @class = "text-danger" })
+			@Html.ValidationMessageFor(model => model.SerialNumber, "", new { @class = "text-danger" })
 		</div>
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.ExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.EditorFor(model => model.ExpirationDate, new { htmlAttributes = new { @class = "form-control" } })
-			@*@Html.ValidationMessageFor(model => model.DateOfBirth, "Data urodzenia jest wymagana", new { @class = "text-danger" })*@
+			@Html.ValidationMessageFor(model => model.ExpirationDate, "", new { @class = "text-danger" })
 		</div>
 	</div>
 
 
 	<div class="form-group">
 		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Zapisz" class="btn btn-default" />
+			<input type="submit" value="Dalej" class="btn btn-primary" />
 		</div>
 	</div>
 </div>
