--- a/StudentRecruiter/Views/ExamResults/Delete.cshtml
+++ b/StudentRecruiter/Views/ExamResults/Delete.cshtml
@@ -4,21 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć ten wynik?</h3>
 <div>
-    <h4>ExamResult</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Exam.Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Exam.Id)
-        </dd>
-
+    
         <dt>
             @Html.DisplayNameFor(model => model.Subject.Name)
         </dt>
@@ -49,8 +40,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-danger" /> |
+            @Html.ActionLink("Powrót", "Index", new { examId = Model.ExamId})
         </div>
     }
 </div>
