--- a/StudentRecruiter/Views/ExamResults/Index.cshtml
+++ b/StudentRecruiter/Views/ExamResults/Index.cshtml
@@ -1,48 +1,47 @@
 ﻿@model IEnumerable<StudentRecruiter.Models.Domain.ExamResult>
 
 
-<h2>Wyniki z egzaminu</h2>
+<h2>Twoje wyniki z egzaminu</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+	@Html.ActionLink("Dodaj nowy wynik", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Exam.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Subject.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Result)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsAdvanced)
-        </th>
-        <th></th>
-    </tr>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.Subject.Name)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Result)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.IsAdvanced)
+		</th>
+		<th></th>
+	</tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Exam.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Subject.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Result)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsAdvanced)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+	@foreach (var item in Model)
+	{
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Subject.Name)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Result)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.IsAdvanced)
+			</td>
+			<td>
+				@Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
+				@Html.ActionLink("Usuń", "Delete", new { id = item.Id })
+			</td>
+		</tr>
+	}
 
 </table>
+
+@if (Model.Count() > 0)
+{
+	<input type="button" value="Wybierz kierunek studiów" class="btn btn-success" onclick="location.href='@Url.Action("Index", "Recruitment")'" />
+}
