--- a/StudentRecruiter/Views/Shared/_LoginPartial.cshtml
+++ b/StudentRecruiter/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
 		<ul class="nav navbar-nav navbar-right">
 			<li>
-				@Html.ActionLink("Witaj " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+				@Html.ActionLink("Witaj " + User.Identity.GetUserName() + "!", "Details", "CandidateDetails", routeValues: null, htmlAttributes: new { title = "Profil" })
 			</li>
 			<li><a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj się</a></li>
 		</ul>
