--- a/StudentRecruiter/Views/Shared/_Layout.cshtml
+++ b/StudentRecruiter/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li>@Html.ActionLink("Rekrutacja", "Index", "Home")</li>
+					<li>@Html.ActionLink("Rekrutacja", "MainPage", "Recruitment")</li>
 					@*<li>@Html.ActionLink("Konto", "Details", "Candidate")</li>*@
 					@if (User.Identity.IsAuthenticated)
 					{
