--- a/StudentRecruiter/Views/Shared/_Layout.cshtml
+++ b/StudentRecruiter/Views/Shared/_Layout.cshtml
@@ -45,10 +45,8 @@
 		{
 			<div class="row" style="text-align:center">
 				<input type="button" value="Rekrutacje" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAll", "Recruitment")'" />
-				<input type="button" value="Kierunki" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("Index", "FieldOfStudies")'" />
-				<input type="button" value="Kandydaci" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAll", "Candidate")'" />
+				<input type="button" value="Kierunki" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("AdminIndex", "Recruitment")'" />
 				<input type="button" value="Użytkownicy" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("GetAllUsers", "Admin")'" />
-				<input type="button" value="Ustawienia" class="btn btn-info" , style="margin:0px 5px 0px 5px; width:150px;" onclick="location.href='@Url.Action("Settings", "Admin")'" />
 			</div>
 		}
 	}
